Add api subscribe comic
